--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,10 @@
 server.port = 8080
 
-spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:mem:testdb
+
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.datasource.url=jdbc:mysql://localhost:3306/hospitaldb
+spring.datasource.username=hospitalapi
+spring.datasource.password=apipassword
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
 spring.data.rest.default-page-size=8
