--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,5 @@ spring.datasource.password=apipassword
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
 spring.data.rest.default-page-size=8
+
+spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
